@@ -47,7 +47,7 @@ copyright = u'2010, OpenMx Development Team'
 # The short X.Y version.
 version = '0.3'
 # The full version, including alpha/beta/rc tags.
-release = '0.3.0-1217'
+release = '0.3.1-1246'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
